--- a/README.Rmd
+++ b/README.Rmd
@@ -36,9 +36,6 @@ This is a basic example which shows you how to record your time:
 
 ```{r example}
 library(timecardassistant)
-## Load Example Data
-load('data/tc_example.RData')
-timecard <- ex
 
 starttc('clientname', 'project name')
 
@@ -56,11 +53,57 @@ Here is a helpful breakdown of the hour break points:
 
 Minutes | Percent |
 ------- | ------- |
+55 | .92 |
+50 | .83 |
+45 | .75 |
+40 | .67 |
+35 | .58 |
 30 | .5 |
 25 | .42 |
 20 | .33 |
 15 | .25 |
 10 | .17 |
 5 | .08 |
+
+## When the activity is done
+
+To record the acitity time to the 'timecard' object you will use the `donetc()` function
+```{r donetc_basic}
+donetc()
+```
+
+### Retroactive activity completion
+
+If you need to adjust the time when the last recorded activity was finished then you will add the 'finished' argument value.
+```{r done_retroacive}
+donetc(finished = .5)
+```
+
+### Activity Notes
+
+Adding notes is a good idea if the project name is not sufficient to record your activity or followup actions need to be recorded.
+```{r done notes}
+donetc(notes = 'this will be recorded with the activity record')
+```
+
+
+The resulting 'timecard' object will looks something like this:
+```{r timecardexample}
+## Load Example Data
+starttc('clientname', 'project name', .5)
+donetc(notes = 'this is just a test')
+
+starttc('clientname2', 'project 2', 1.5)
+donetc(1)
+
+starttc('clientname', 'project 3', 2.5)
+donetc(1.5, notes = 'this is just a test')
+```
+
+
+```{r example_view}
+timecard
+```
+
 
 
