edit explanation for readme file

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,8 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of timecardassistant is to create an efficiency around time tracking and 
-help develop a comfort level of workign with R.
+The goal of timecardassistant package is to create efficiency around time tracking along with helping improve the end users comfort level of working with R.
 
 ## Installation
 
@@ -30,7 +29,9 @@ You can install the released version of timecardassistant from
 # install.packages("devtools")
 devtools::install_github("benrwoodard/timecardassistant")
 ```
-## Example
+## Examples
+
+### Start activity record
 
 This is a basic example which shows you how to record your time:
 
@@ -38,12 +39,15 @@ This is a basic example which shows you how to record your time:
 library(timecardassistant)
 
 starttc('clientname', 'project name')
-
 ```
+
+This function creates a 'ps' object which is used in the `donetc()` function to create the final record for the activity on the 'timecard' object.
+
+#### Adjusting activity started time
 
 If you have missed the time when you started and want to start the activity to a previous time then you simply use the 'started' argument.
 
-Each hour is calculated as 100% or 1. To set the time to be exactly 30 minutes before the curren time you would run the following:
+Each hour is calculated as 100% or 1. To set the time to be exactly 30 minutes before the current time you would run the following:
 
 ```{r started}
 starttc('clientname', 'project name', started = .5)
@@ -51,7 +55,7 @@ starttc('clientname', 'project name', started = .5)
 
 Here is a helpful breakdown of the hour break points:
 
-Minutes | Percent |
+minutes | started |
 ------- | ------- |
 55 | .92 |
 50 | .83 |
@@ -65,32 +69,37 @@ Minutes | Percent |
 10 | .17 |
 5 | .08 |
 
-## When the activity is done
+### Finished activity record
 
-To record the acitity time to the 'timecard' object you will use the `donetc()` function
+To record the activity time to the 'timecard' object you will use the `donetc()` function
 ```{r donetc_basic}
 donetc()
 ```
 
-### Retroactive activity completion
+#### Adjusting activity completed time
 
 If you need to adjust the time when the last recorded activity was finished then you will add the 'finished' argument value.
 ```{r done_retroacive}
 donetc(finished = .5)
 ```
 
-### Activity Notes
+#### Adding activity notes
 
 Adding notes is a good idea if the project name is not sufficient to record your activity or followup actions need to be recorded.
 ```{r done notes}
 donetc(notes = 'this will be recorded with the activity record')
 ```
 
+#### Timecard csv file created
 
-The resulting 'timecard' object will looks something like this:
+Every time you use the `donetc()` function a csv file is created with the 'yyyy-mm-dd_timecard.csv' naming convention. There is only one file per day and can be used to restore the timecard object if needed, using the `restoretc()` function.
+
+### Example Workflow
+
+The following is an example of a project activity workflow. Normally, these would be added in the console and not recorded in an R script file since these are simply triggers to recorded the start and end of an activity.
 ```{r timecardexample}
 ## Load Example Data
-starttc('clientname', 'project name', .5)
+starttc('clientname', 'project 1', .5)
 donetc(notes = 'this is just a test')
 
 starttc('clientname2', 'project 2', 1.5)
@@ -100,9 +109,16 @@ starttc('clientname', 'project 3', 2.5)
 donetc(1.5, notes = 'this is just a test')
 ```
 
+#### Products of the functions
 
-```{r example_view}
+The preceding functions will create the 'timecard' object and the timecard csv file for the date the functions were called.
+```{r object_view}
 timecard
+```
+
+
+```{r csv_view}
+list.files(pattern = "_timecard.csv")
 ```
 
 
